# TaskToMind_tg_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
app/: main.py
app/bot/: bot.py
app/bot/dialogs/: __init__.py  components.py  enums.py  id_uniqueness_validator.py  states.py
app/bot/handlers/: __init__.py  commands.py  others.py
app/bot/middlewares/: last_active.py
app/config_data/: config.py
app/core/config/: settings.py
app/core/db/: base.py  session.py
app/core/di/: providers.py
app/core/locales/: ru.py
app/core/middlewares/: db_session.py  last_active.py
app/di/: providers.py
app/locales/: ru.py
app/utils/: serialization.py
bot/: bot.py  main.py
bot/dialogs/: __init__.py  components.py  states.py
bot/flows/: __init__.py
bot/handlers/: __init__.py  basic.py  commands.py  others.py  task_messages.py
bot/middlewares/: last_active.py
config_data/: config.py
database/: db.py  models.py  requests.py
database/crud/: achievement.py  stats.py  task.py  task_list.py  tracking.py  user.py
database/middlewares/: __init__.py
database/migrations/: env.py
database/models/: __init__.py  achievement.py  base.py  enums.py  stats.py  support.py  tag.py  task.py  task_list.py  tasklist.py  user.py
database/orchestration/: task.py  task_list.py  user.py
database/services/: achievement.py  task.py  task_list.py  user.py
locales/: ru.py
tests/bot/: conftest.py
tests/dev_helpers/: snapshoter.py
utils/: serialization.py
(+155 files in other folders)
