[project]
name = "tasktomind"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.16.5",
    "dishka>=1.7.2",
    "environs>=14.3.0",
    "idna==3.11",
    "psycopg>=3.2.10",
    "psycopg-binary>=3.2.10",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "redis==7.1.0",
    "sqlalchemy>=2.0.43",
]
